2012-05-01  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.4.0-rc3 Released.

	* channels/chan_sip.c: Revert revision 360862

	Revision 360862 was intended to improve identities sent in dialog-info
	NOTIFY requests. Some users reported that hint became broken once this
	was done. It's not clear exactly what part of the patch has caused
	this regression, but broken hints are bad.

	For now, this revision is being reverted so that the next releases of
	Asterisk do not have bad behavior in them. The original reported issue
	will have to be fixed differently in the next version of Asterisk.

	(issue ASTERISK-16735)

2012-04-24  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.4.0-rc2 Released.

	* AST-2012-004

	* AST-2012-005

	* AST-2012-006

2012-04-04  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.4.0-rc1 Released.

2012-04-04 16:38 +0000 [r361091-361143]  Jonathan Rose <jrose@digium.com>

	* main/channel.c, pbx/pbx_loopback.c, addons/chan_ooh323.c, /,
	  channels/chan_sip.c, main/app.c, pbx/pbx_realtime.c,
	  apps/app_externalivr.c, channels/chan_iax2.c,
	  res/res_fax_spandsp.c, apps/app_milliwatt.c: Replace GNU
	  old-style field designator extensions to fix clang warnings
	  (issue ASTERISK-19540) Reported by: Makoto Dei Patches:
	  clang-gnu-designator.patch uploaded by Makoto Dei (license 5027)
	  ........ Also add from the patch the portion in res_fax_spandsp
	  that didn't apply to 1.8 Merged revisions 361142 from
	  http://svn.asterisk.org/svn/asterisk/branches/1.8 (closes issue
	  ASTERISK-19540)

	* /, apps/app_meetme.c: Make the MeetMeAdmin N command (mute all
	  nonadmins) not mute admins (Closes Issue ASTERISK-19335) Reported
	  by: Johan Wilfer Review: https://reviewboard.asterisk.org/r/1843/
	  ........ Merged revisions 361090 from
	  http://svn.asterisk.org/svn/asterisk/branches/1.8

2012-04-03 20:08 +0000 [r360993-361041]  Kinsey Moore <kmoore@digium.com>
